--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gym-website",
   "version": "0.1.0",
-  "homepage": "https://soniflexgym.com",
+  "homepage": "https://soniflex-gym.netlify.app/",
   "private": true,
   "dependencies": {
     "@emotion/core": "^10.0.28",
